--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <a href="https://www.google.com/">Google</a>
       <a href="https://mint.intuit.com/login.event?task=L">Mint</a>
       <a href="https://www.fidelity.com/">Fidelity</a>
+      <a href="https://c9.io/">Cloud9</a>
+      <a href="https://github.com/">GitHub</a>
       <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/">SB Admin 2</a>
     </div>
     
