--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/">SB Admin 2</a>
     </div>
     
-    <form method="get" action="http://www.google.com/search">
+    <form method="get" action="https://www.google.com/search">
       
       <div style="border:2px dotted black;padding:4px;width:15em;">
         <table border="0" align="center" cellpadding="0">
