--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <input type="text" name="q" size="25" style="color:#808080;"
                 maxlength="255" value="Google search"
                 onfocus="if(this.value==this.defaultValue)this.value='';
-                  this.style.color='black':"
-                onblur="if(this.value=='')this.value=this.defaultValue; "/>
+                  this.style.color='black';"
+                onblur="if(this.value=='')this.value=this.defaultValue;" />
               <input type="submit" value="Go!" />
               <input type="hidden" name="sitesearch" value="" />
             </td>
