--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     
     <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="https://www.gmail.com/">Gmail</a>
-      <a href="https://www.google.com/">Google</a>
-      <a href="https://mint.intuit.com/login.event?task=L">Mint</a>
-      <a href="https://www.fidelity.com/">Fidelity</a>
-      <a href="https://c9.io/">Cloud9</a>
-      <a href="https://github.com/">GitHub</a>
-      <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/">SB Admin 2</a>
+      <button type="button" class="btn"><a href="index.html">Home</a></button>
+      <button type="button" class="btn"><a href="https://www.gmail.com/">Gmail</a></button>
+      <button type="button" class="btn"><a href="https://www.google.com/">Google</a></button>
+      <button type="button" class="btn"><a href="https://mint.intuit.com/login.event?task=L">Mint</a></button>
+      <button type="button" class="btn"><a href="https://www.fidelity.com/">Fidelity</a></button>
+      <button type="button" class="btn"><a href="https://c9.io/">Cloud9</a></button>
+      <button type="button" class="btn"><a href="https://github.com/">GitHub</a></button>
+      <button type="button" class="btn"><a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/">SB Admin 2</a></button>
     </div>
     
     <form method="get" action="https://www.google.com/search">
