Test Hyperlink Buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     
     <div class="navbar">
-      <button type="button" class="btn btn-outline btn-info"><a href="index.html">Home</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://www.gmail.com/">Gmail</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://www.google.com/">Google</a></button>
+      <a href="index.html" class="btn btn-outline btn-info">Home</a>
+      <a href="https://www.gmail.com/" class="btn btn-outline btn-info">Gmail</a>
+      <a href="https://www.google.com/" class="btn btn-outline btn-info">Google</a>
       <button type="button" class="btn btn-outline btn-info"><a href="https://mint.intuit.com/login.event?task=L">Mint</a></button>
       <button type="button" class="btn btn-outline btn-info"><a href="https://www.fidelity.com/">Fidelity</a></button>
       <button type="button" class="btn btn-outline btn-info"><a href="https://c9.io/">Cloud9</a></button>
