Complete initial link buttons

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <a href="index.html" class="btn btn-outline btn-info">Home</a>
       <a href="https://www.gmail.com/" class="btn btn-outline btn-info">Gmail</a>
       <a href="https://www.google.com/" class="btn btn-outline btn-info">Google</a>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://mint.intuit.com/login.event?task=L">Mint</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://www.fidelity.com/">Fidelity</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://c9.io/">Cloud9</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://github.com/">GitHub</a></button>
-      <button type="button" class="btn btn-outline btn-info"><a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/">SB Admin 2</a></button>
+      <a href="https://mint.intuit.com/login.event?task=L" class="btn btn-outline btn-info">Mint</a>
+      <a href="https://www.fidelity.com/" class="btn btn-outline btn-info">Fidelity</a>
+      <a href="https://c9.io/" class="btn btn-outline btn-info">Cloud9</a>
+      <a href="https://github.com/" class="btn btn-outline btn-info">GitHub</a>
+      <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/" class="btn btn-outline btn-info">SB Admin 2</a>
     </div>
     
     <form method="get" action="https://www.google.com/search">
