Adjust web search

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!--<div class="navbar">-->
       <a href="index.html" class="btn btn-outline btn-info">Home</a>
       <form method="get" action="https://www.google.com/search">
-        <input class="form-group form-control" placeholder="Google search" name="google" type="google" autofocus>
+        <input class="form-group form-control" type="text" name="q" placeholder="Google search"
+           autofocus>
+        <input type="hidden" name="websearch" value="">
       </form>
       <a href="https://www.gmail.com/" class="btn btn-outline btn-info">Gmail</a>
       <a href="https://www.google.com/" class="btn btn-outline btn-info">Google</a>
