--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form method="get" action="https://www.google.com/search">
         <input class="form-group form-control" type="text" name="q" placeholder="Google search"
            autofocus>
-        <input type="hidden" name="websearch" value="">
+        <!--<input type="hidden" name="websearch" value="">-->
       </form>
       <a href="https://www.gmail.com/" class="btn btn-outline btn-info">Gmail</a>
       <a href="https://www.google.com/" class="btn btn-outline btn-info">Google</a>
