Add Learn Enough link

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     
     <div class="navbar">
       <a href="index.html" class="btn btn-outline btn-info">Home</a>
+      <a href="https://www.gmail.com/" target="_blank" class="btn btn-outline btn-info">Gmail</a>
+      <a href="https://www.google.com/" target="_blank" class="btn btn-outline btn-info">Google</a>
+      <a href="https://mint.intuit.com/login.event?task=L" target="_blank" class="btn btn-outline btn-info">Mint</a>
+      <a href="https://www.fidelity.com/" target="_blank" class="btn btn-outline btn-info">Fidelity</a>
+      <a href="https://www.learnenough.com/web-development-fundamentals" target="_blank" class="btn btn-outline btn-info">Learn Enough</a>
+      <a href="https://c9.io/" target="_blank" class="btn btn-outline btn-info">Cloud9</a>
+      <a href="https://github.com/" target="_blank" class="btn btn-outline btn-info">GitHub</a>
+      <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/" class="btn btn-outline btn-info">SB Admin 2</a>
       <form method="get" action="https://www.google.com/search">
         <input class="form-group form-control" type="text" name="q" placeholder="Google search"
            autofocus>
         <!--<input type="hidden" name="websearch" value="">-->
       </form>
-      <a href="https://www.gmail.com/" class="btn btn-outline btn-info">Gmail</a>
-      <a href="https://www.google.com/" class="btn btn-outline btn-info">Google</a>
-      <a href="https://mint.intuit.com/login.event?task=L" class="btn btn-outline btn-info">Mint</a>
-      <a href="https://www.fidelity.com/" class="btn btn-outline btn-info">Fidelity</a>
-      <a href="https://c9.io/" class="btn btn-outline btn-info">Cloud9</a>
-      <a href="https://github.com/" class="btn btn-outline btn-info">GitHub</a>
-      <a href="https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/" class="btn btn-outline btn-info">SB Admin 2</a>
     </div>
     
     <!--<form method="get" action="https://www.google.com/search">-->
