Add Rails Tutorial

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://www.google.com/" target="_blank" class="btn btn-outline btn-info">Google</a>
       <a href="https://mint.intuit.com/login.event?task=L" target="_blank" class="btn btn-outline btn-info">Mint</a>
       <a href="https://www.fidelity.com/" target="_blank" class="btn btn-outline btn-info">Fidelity</a>
+      <a href="https://www.railstutorial.org/book" target="_blank" class="btn btn-outline btn-info">Rails Tutorial</a>
       <a href="https://www.learnenough.com/web-development-fundamentals" target="_blank" class="btn btn-outline btn-info">Learn Enough</a>
       <a href="https://c9.io/" target="_blank" class="btn btn-outline btn-info">Cloud9</a>
       <a href="https://github.com/" target="_blank" class="btn btn-outline btn-info">GitHub</a>
